# extending-jax

./: CMakeLists.txt  ComputeMagnification.ipynb  demo.ipynb  pyproject.toml  setup.py
lib/: acc_sum.h  cpu_ops.cc  eft.h  ehrlich_aberth.h  gpu_ops.cc  horner.h  init_est.h  kernel_helpers.h  kernels.cc.cu  kernels.h  pybind11_kernel_helpers.h
src/ehrlich_aberth/: ehrlich_aberth_jax.py
src/ehrlich_aberth_jax/: __init__.py  ehrlich_aberth_jax.py
